syntax = 'proto3';
package GOTV_PLUS;

service GOTV_Plus {
  rpc GetMatches(GetMatchesRequest) returns (GetMatchesReply) {}
  rpc GetMatch(GetMatchRequest) returns (Match) {}
  rpc DeleteMatch(DeleteMatchRequest) returns (DeleteMatchReply) {}
  rpc MarkID(MarkIDRequest) returns (MarkIDReply) {}
}

message Match {
  string token = 1;
  string id = 2;
}

message GetMatchesRequest {
  
}

message GetMatchesReply {
  repeated Match match = 1;
  bool error = 2;
  string errormessage = 3;
}

message GetMatchRequest {
  oneof ids {
    string token = 1;
    string id = 2;
  }  
}

message DeleteMatchRequest{
  oneof ids {
    string token = 1;
    string id = 2;
  } 
}

message DeleteMatchReply {
  bool error = 1;
  string errormessage = 2;
}


message MarkIDRequest {
  string token = 1;
  string id = 2;
}

message MarkIDReply {
  bool error = 1;
  string errormessage = 2;
}